<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/clouds"
	xmlns:tools="http://schemas.android.com/tools"
	android:id = "@+id/fragmentDataEntry"
	tools:context= "myFragments.DataEntryFragment"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<RelativeLayout
		android:id="@+id/activity_mainA"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="10dp"
		android:weightSum="1"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0">


		<Button
			android:id="@+id/buttonDate"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_alignStart="@+id/editTextEventNum"
			android:layout_alignParentTop="true"
			android:layout_marginStart="1dp"
			android:layout_marginTop="5dp"
			android:contentDescription="TODO"
			android:cursorVisible="true"
			android:focusableInTouchMode="false"
			android:paddingTop="5dp"
			android:text="@string/date" />

		<Button
			android:id="@+id/buttonTimeIn"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/buttonDate"
			android:layout_alignStart="@+id/buttonDate"
			android:contentDescription="TODO"
			android:cursorVisible="true"
			android:focusableInTouchMode="false"
			android:paddingTop="5dp"
			android:text="@string/start_time" />

		<Button
			android:id="@+id/buttonTimeOut"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/buttonTimeIn"
			android:layout_alignStart="@+id/buttonTimeIn"
			android:contentDescription="TODO"
			android:cursorVisible="true"
			android:focusableInTouchMode="false"
			android:paddingTop="5dp"
			android:text="@string/end_time" />


		<Button
			android:id="@+id/btnSetData"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editTextInfo"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="0dp"
			android:contentDescription="TODO"
			android:cursorVisible="true"
			android:enabled="true"
			android:focusableInTouchMode="false"
			android:paddingTop="5dp"
			android:text="@string/compute_hours"
			android:textStyle="bold" />

		<CheckBox
			android:id="@+id/checkBoxPaidHour"
			android:layout_width="195dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editTextEventName"
			android:layout_marginTop="2dp"
			android:checked="false"
			android:contentDescription="TODO"
			android:cursorVisible="true"
			android:focusableInTouchMode="true"
			android:paddingTop="5dp"
			android:text="@string/lunch_break" />

		<CheckBox
			android:id="@+id/checkBoxPaid"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editTextEventName"
			android:layout_alignStart="@+id/editTextEventName"
			android:layout_marginStart="93dp"
			android:layout_marginTop="1dp"
			android:checked="true"
			android:contentDescription="TODO"
			android:focusableInTouchMode="true"
			android:paddingTop="5dp"
			android:text="@string/no_lunch" />

		<EditText
			android:id="@+id/editTextEventNum"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/buttonTimeOut"
			android:layout_centerHorizontal="true"
			android:contentDescription="TODO"
			android:ems="10"
			android:hint="@string/event_number"
			android:textSize="14sp"
			android:inputType="number"
			android:textColor="@android:color/black"
			android:textColorHighlight="@android:color/background_light" />


		<EditText
			android:id="@+id/editTextEventName"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editTextEventNum"
			android:layout_alignStart="@+id/editTextEventNum"
			android:contentDescription="TODO"
			android:textSize="14sp"
			android:ems="10"
			android:hint="@string/event_name"
			android:inputType="text" />

		<EditText
			android:id="@+id/editTextInfo"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_below="@+id/checkBoxPaid"
			android:layout_alignParentStart="false"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="5dp"
			android:background="@drawable/infobox"
			android:hint="Additional Information, if required"
			android:lineSpacingExtra="2sp"
			android:paddingLeft="5dp"
			android:selectAllOnFocus="false"
			android:singleLine="false"
			android:textAlignment="textStart"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/textViewRegHours"
			android:layout_width="100dp"
			android:layout_height="20dp"
			android:layout_above="@+id/textViewOTHours"
			android:layout_marginStart="2dp"
			android:layout_marginBottom="5dp"
			android:layout_toEndOf="@+id/textViewRegHourslabel"
			android:layout_weight="0.19"
			android:contentDescription="TODO"
			android:paddingTop="0dp"
			android:text="0"
			android:textStyle="bold"
			tools:layout_editor_absoluteX="159dp"
			tools:layout_editor_absoluteY="507dp" />

		<TextView
			android:id="@+id/textViewOTHourslabel"
			android:layout_width="200dp"
			android:layout_height="20dp"
			android:layout_below="@+id/textViewRegHourslabel"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="0dp"
			android:layout_weight="0.19"
			android:clickable="false"
			android:contentDescription="TODO"
			android:longClickable="false"
			android:paddingTop="0dp"
			android:text=" OverTime Hours = "
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textViewOTHours"
			android:layout_width="100dp"
			android:layout_height="20dp"
			android:layout_above="@+id/textViewYTD"
			android:layout_alignStart="@+id/textViewRegHours"
			android:layout_marginStart="0dp"
			android:layout_marginBottom="0dp"
			android:contentDescription="TODO"
			android:paddingTop="0dp"
			android:text="0"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textViewYTDlabel"
			android:layout_width="200dp"
			android:layout_height="20dp"

			android:layout_below="@+id/textViewOTHourslabel"
			android:layout_alignParentStart="true"
			android:layout_marginStart="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="0dp"
			android:layout_weight="0.19"
			android:contentDescription="TODO"
			android:paddingTop="0dp"
			android:text="Year To Date Hours = "
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textViewYTD"
			android:layout_width="100dp"
			android:layout_height="20dp"
			android:layout_alignBaseline="@+id/textViewYTDlabel"
			android:layout_alignStart="@+id/textViewOTHours"
			android:layout_alignBottom="@+id/textViewYTDlabel"
			android:layout_marginStart="0dp"
			android:layout_marginBottom="0dp"
			android:contentDescription="TODO"
			android:paddingTop="0dp"
			android:text="0"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textViewRegHourslabel"
			android:layout_width="200dp"
			android:layout_height="20dp"
			android:layout_below="@+id/btnSetData"
			android:layout_alignStart="@+id/textViewOTHourslabel"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp"
			android:layout_weight="0.19"
			android:clickable="true"
			android:contentDescription="TODO"
			android:longClickable="false"
			android:paddingTop="0dp"
			android:text=" Regular Hours = "
			android:textStyle="bold" />


	</RelativeLayout>

</RelativeLayout>